[package]
name = "control-components"
version = "0.1.0"
edition = "2021"

[lib]
name = "control_components"
path = "src/lib.rs"

[dependencies]
phidget = "0.1.4"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
ethercrab = "0.5.0"
signal-hook = "0.3.17"
log = "0.4.21"


